--- a/QuientoModulo/Ejercicio2/Ejercicio2.cbp
+++ b/QuientoModulo/Ejercicio2/Ejercicio2.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Ejercicio1" />
+		<Option title="Ejercicio2" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Ejercicio1" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Ejercicio2" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Ejercicio1" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Ejercicio2" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,17 +31,14 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="colasD.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="colasD.h" />
+		<Unit filename="archivo.txt" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="pilasD.c">
+		<Unit filename="pila.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="pilasD.h" />
+		<Unit filename="pila.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
