--- a/QuintoModulo/.vscode/settings.json
+++ b/QuintoModulo/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdio.h": "c",
         "stdlib.h": "c",
-        "cstdlib": "c"
+        "cstdlib": "c",
+        "cola.h": "c"
     }
 }
