--- a/OctavoModulo/.vscode/settings.json
+++ b/OctavoModulo/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "cola.h": "c",
+        "stdlib.h": "c",
+        "pila.h": "c",
+        "cstdlib": "c"
     }
 }
